complete convert data